--- a/app/globals.css
+++ b/app/globals.css
@@ -12,14 +12,14 @@
 
 html,
 body {
-  background-color: #f4f3f0;
+  /* background-color: #f4f3f0; */
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
   color: var(--foreground);
-  background: #f4f3f0;
+  /* background: #f4f3f0; */
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
